--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.lobby.fragments.chat_fragment.chat_activity.ChatActivity">
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    tools:context=".zalo.views.lobby.fragments.chat_fragment.chat_activity.ChatActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
@@ -18,24 +20,27 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
+        android:maxLines="4"
+        android:inputType="textMultiLine"
         android:id="@+id/msgTextInputEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="@dimen/small"
+        android:layout_marginLeft="@dimen/small"
+        android:layout_marginEnd="@dimen/small"
         android:ems="10"
         android:hint="@string/enter_a_message"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/pictureImgButton"
         app:layout_constraintStart_toEndOf="@+id/emojiImgButton" />
 
     <ImageButton
         android:id="@+id/emojiImgButton"
         android:layout_width="30dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="@dimen/small"
+        android:layout_marginLeft="@dimen/small"
+        android:layout_marginBottom="@dimen/small"
         app:layout_constraintBottom_toBottomOf="@+id/msgTextInputEditText"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,9 +50,9 @@
         android:id="@+id/pictureImgButton"
         android:layout_width="35dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="@dimen/small"
+        android:layout_marginRight="@dimen/small"
+        android:layout_marginBottom="@dimen/small"
         app:layout_constraintBottom_toBottomOf="@+id/msgTextInputEditText"
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toEndOf="parent"
