--- a/app/src/main/res/menu/menu_chat_activity.xml
+++ b/app/src/main/res/menu/menu_chat_activity.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="vng.zalo.tdtai.zalo.screens.lobby.fragments.chat_fragment.chat_activity.ChatActivity">
+    tools:context=".zalo.views.lobby.fragments.chat_fragment.chat_activity.ChatActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
