--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,6 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="appbar_padding_top">8dp</dimen>
-
-    <dimen name="small">8dp</dimen>
-    <dimen name="medium">16dp</dimen>
-    <dimen name="large">32dp</dimen>
+    <dimen name="activity_horizontal_margin">64dp</dimen>
+    <dimen name="size_small_8dp">8dp</dimen>
+    <dimen name="size_medium_16dp">16dp</dimen>
+    <dimen name="size_large_32dp">32dp</dimen>
 </resources>
