--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context=".zalo.views.home.fragments.chat_fragment.chat_activity.ChatActivity">
+    tools:context=".zalo.views.home.fragments.chat_fragment.chat_activity.RoomActivity">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarChatActivity"
+        android:id="@+id/toolbarRoomActivity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
@@ -97,11 +97,11 @@
         app:srcCompat="@android:drawable/ic_menu_upload" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/chatActivityRecyclerView"
+        android:id="@+id/recyclerViewRoomActivity"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/msgTextInputEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbarChatActivity" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarRoomActivity" />
 </androidx.constraintlayout.widget.ConstraintLayout>
