--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context=".zalo.views.home.fragments.chat_fragment.chat_activity.RoomActivity">
+    tools:context=".zalo.views.home.fragments.chat_fragment.room_activity.RoomActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarRoomActivity"
@@ -33,8 +33,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/pictureImgButton"
         app:layout_constraintStart_toEndOf="@+id/emojiImgButton" />
-
-    <ImageButton
+    <ImageView
         android:id="@+id/emojiImgButton"
         android:layout_width="30dp"
         android:layout_height="0dp"
@@ -44,9 +43,10 @@
         app:layout_constraintBottom_toBottomOf="@+id/msgTextInputEditText"
         app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@drawable/emoji"
+        />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/pictureImgButton"
         android:layout_width="35dp"
         android:layout_height="0dp"
@@ -58,9 +58,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/voiceImgButton"
-        app:srcCompat="@android:drawable/ic_menu_gallery" />
+        app:srcCompat="@drawable/photo" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/sendMsgImgButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -70,9 +70,9 @@
         app:layout_constraintEnd_toEndOf="@+id/pictureImgButton"
         app:layout_constraintStart_toStartOf="@+id/pictureImgButton"
         app:layout_constraintTop_toTopOf="@+id/pictureImgButton"
-        app:srcCompat="@android:drawable/ic_menu_send" />
+        app:srcCompat="@drawable/send" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/voiceImgButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -81,9 +81,9 @@
         app:layout_constraintEnd_toStartOf="@+id/pictureImgButton"
         app:layout_constraintStart_toEndOf="@+id/uploadFileImgButton"
         app:layout_constraintTop_toTopOf="@+id/pictureImgButton"
-        app:srcCompat="@android:drawable/ic_btn_speak_now" />
+        app:srcCompat="@drawable/mic" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/uploadFileImgButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -94,9 +94,10 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/pictureImgButton"
-        app:srcCompat="@android:drawable/ic_menu_upload" />
+        app:srcCompat="@drawable/attach_file" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/browser_actions_bg_grey"
         android:id="@+id/recyclerViewRoomActivity"
         android:layout_width="0dp"
         android:layout_height="0dp"
